--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
