--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.6.3",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
