--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.3",
     "node-fetch": "^3.3.2",
