--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.3",
     "node-fetch": "^3.3.2",
